--- a/Makefile.am
+++ b/Makefile.am
@@ -1,8 +1,8 @@
 SUBDIRS = m4 po quark charm-quark pixmaps
 
-if USE_GCONF
-SUBDIRS += strange-quark
-endif
+#if USE_GCONF
+#SUBDIRS += strange-quark
+#endif
 
 ACLOCAL_AMFLAGS = -I m4
 
