--- a/quark/Makefile.am
+++ b/quark/Makefile.am
@@ -1,12 +1,12 @@
 localedir=$(datadir)/locale
 
-AM_CPPFLAGS=$(GLIB_CFLAGS) $(GTHREAD_CFLAGS) $(GNOMEVFS_CFLAGS) $(GCONF_CFLAGS) $(XINE_CFLAGS) \
+AM_CPPFLAGS=$(GLIB_CFLAGS) $(GTHREAD_CFLAGS) $(JSON_CFLAGS) $(GNOMEVFS_CFLAGS) $(GCONF_CFLAGS) $(XINE_CFLAGS) \
   -DG_DISABLE_DEPRECATED -DGCONF_DISABLE_DEPRECATED \
   -DLOCALEDIR=\"$(localedir)\"
 
 bin_PROGRAMS = quark
 
-quark_LDADD = $(GLIB_LIBS) $(GTHREAD_LIBS) $(GNOMEVFS_LIBS) $(GCONF_LIBS) $(XINE_LIBS)
+quark_LDADD = $(GLIB_LIBS) $(GTHREAD_LIBS) $(JSON_LIBS) $(GNOMEVFS_LIBS) $(GCONF_LIBS) $(XINE_LIBS)
 quark_SOURCES = \
   gettext.h \
   main.h \
