--- a/quark/Makefile.am
+++ b/quark/Makefile.am
@@ -1,6 +1,7 @@
 localedir=$(datadir)/locale
 
 AM_CPPFLAGS=$(GLIB_CFLAGS) $(GTHREAD_CFLAGS) $(JSON_CFLAGS) $(GNOMEVFS_CFLAGS) $(GCONF_CFLAGS) $(XINE_CFLAGS) \
+  -std=gnu99 \
   -DG_DISABLE_DEPRECATED -DGCONF_DISABLE_DEPRECATED \
   -DLOCALEDIR=\"$(localedir)\"
 
