--- a/configure.ac
+++ b/configure.ac
@@ -45,6 +45,10 @@ PKG_CHECK_MODULES(JSON, [json-glib-1.0])
 AC_SUBST(JSON_CFLAGS)
 AC_SUBST(JSON_LIBS)
 
+PKG_CHECK_MODULES(DBUS_GLIB, [dbus-glib-1])
+AC_SUBST(DBUS_GLIB_CFLAGS)
+AC_SUBST(DBUS_GLIB_LIBS)
+
 AC_ARG_ENABLE(gconf,
   [  --disable-gconf         disable use of gconf (for embedded targets)],
   [], [enable_gconf="yes"])
