--- a/corn/Makefile.am
+++ b/corn/Makefile.am
@@ -6,12 +6,12 @@ AM_CPPFLAGS=$(GLIB_CFLAGS) $(GTHREAD_CFLAGS) $(JSON_CFLAGS) \
     -DG_DISABLE_DEPRECATED -DGCONF_DISABLE_DEPRECATED \
     -DLOCALEDIR=\"$(localedir)\"
 
-bin_PROGRAMS = quark
+bin_PROGRAMS = corn
 
-quark_LDADD = $(GLIB_LIBS) $(GTHREAD_LIBS) $(JSON_LIBS) $(DBUS_GLIB_CFLAGS) \
+corn_LDADD = $(GLIB_LIBS) $(GTHREAD_LIBS) $(JSON_LIBS) $(DBUS_GLIB_CFLAGS) \
     $(GNOMEVFS_LIBS) $(GCONF_LIBS) $(XINE_LIBS)
 
-quark_SOURCES = \
+corn_SOURCES = \
   gettext.h \
   main.h \
   main.c \
@@ -32,7 +32,7 @@ quark_SOURCES = \
   mpris-player.c \
   mpris-player-glue.h
 
-EXTRA_DIST = quark.schemas mpris-root.xml mpris-player.xml
+EXTRA_DIST = corn.schemas mpris-root.xml mpris-player.xml
 
 BUILT_SOURCES = mpris-root-glue.h mpris-player-glue.h
 
@@ -43,7 +43,7 @@ mpris-player-glue.h: mpris-player.xml
 	$(LIBTOOL) --mode=execute dbus-binding-tool --prefix=mpris_player --mode=glib-server --output=mpris-player-glue.h $(srcdir)/mpris-player.xml
 
 if USE_GCONF
-install-data-local: quark.schemas
+install-data-local: corn.schemas
 if GCONF_SCHEMAS_INSTALL
 	GCONF_CONFIG_SOURCE=$(GCONF_SCHEMA_CONFIG_SOURCE) \
 	gconftool-2 --makefile-install-rule $<
@@ -52,5 +52,5 @@ endif
 	$(INSTALL) $< $(DESTDIR)$(GCONF_SCHEMA_FILE_DIR)
 
 uninstall-local:
-	$(RM) $(DESTDIR)$(GCONF_SCHEMA_FILE_DIR)/quark.schemas
+	$(RM) $(DESTDIR)$(GCONF_SCHEMA_FILE_DIR)/corn.schemas
 endif
