--- a/corn/Makefile.am
+++ b/corn/Makefile.am
@@ -30,17 +30,23 @@ corn_SOURCES = \
   mpris-root-glue.h \
   mpris-player.h \
   mpris-player.c \
-  mpris-player-glue.h
+  mpris-player-glue.h \
+  mpris-tracklist.h \
+  mpris-tracklist.c \
+  mpris-tracklist-glue.h
 
-EXTRA_DIST = corn.schemas mpris-root.xml mpris-player.xml
+EXTRA_DIST = corn.schemas mpris-root.xml mpris-player.xml mpris-tracklist.xml
 
-BUILT_SOURCES = mpris-root-glue.h mpris-player-glue.h
+BUILT_SOURCES = mpris-root-glue.h mpris-player-glue.h mpris-tracklist-glue.h
 
 mpris-root-glue.h: mpris-root.xml
 	$(LIBTOOL) --mode=execute dbus-binding-tool --prefix=mpris_root --mode=glib-server --output=mpris-root-glue.h $(srcdir)/mpris-root.xml
 
 mpris-player-glue.h: mpris-player.xml
 	$(LIBTOOL) --mode=execute dbus-binding-tool --prefix=mpris_player --mode=glib-server --output=mpris-player-glue.h $(srcdir)/mpris-player.xml
+
+mpris-tracklist-glue.h: mpris-tracklist.xml
+	$(LIBTOOL) --mode=execute dbus-binding-tool --prefix=mpris_tracklist --mode=glib-server --output=mpris-tracklist-glue.h $(srcdir)/mpris-tracklist.xml
 
 if USE_GCONF
 install-data-local: corn.schemas
