remove all traces of json

--- a/corn/Makefile.am
+++ b/corn/Makefile.am
@@ -1,13 +1,13 @@
 localedir=$(datadir)/locale
 
-AM_CPPFLAGS=$(GLIB_CFLAGS) $(GTHREAD_CFLAGS) $(JSON_CFLAGS) \
+AM_CPPFLAGS=$(GLIB_CFLAGS) $(GTHREAD_CFLAGS) \
     $(DBUS_GLIB_CFLAGS) $(GNOMEVFS_CFLAGS) $(GCONF_CFLAGS) $(XINE_CFLAGS) \
     -DG_DISABLE_DEPRECATED -DGCONF_DISABLE_DEPRECATED \
     -DLOCALEDIR=\"$(localedir)\"
 
 bin_PROGRAMS = corn
 
-corn_LDADD = $(GLIB_LIBS) $(GTHREAD_LIBS) $(JSON_LIBS) $(DBUS_GLIB_CFLAGS) \
+corn_LDADD = $(GLIB_LIBS) $(GTHREAD_LIBS) $(DBUS_GLIB_CFLAGS) \
     $(GNOMEVFS_LIBS) $(GCONF_LIBS) $(XINE_LIBS)
 
 corn_SOURCES = \
