set version to 0.0.0 and bug email to my email in autoconf, and use PACKAGE_STRING for / Identity method

--- a/configure.ac
+++ b/configure.ac
@@ -1,5 +1,5 @@
 AC_PREREQ([2.54])
-AC_INIT([corn], [3.21], [http://bugs.com/])
+AC_INIT([corn], [0.0.0], [nick@incise.org])
 AM_INIT_AUTOMAKE
 AC_CONFIG_SRCDIR([corn/main.c])
 
