split out socketpair code into its own module

--- a/corn/Makefile.am
+++ b/corn/Makefile.am
@@ -29,6 +29,8 @@ corn_SOURCES = \
   parsefile.c \
   configuration.h \
   configuration.c \
+  sockqueue.h \
+  sockqueue.c \
   cpris-root.h \
   cpris-root.c \
   cpris-root-glue.h \
