--- a/configure.ac
+++ b/configure.ac
@@ -24,7 +24,7 @@ PKG_CHECK_MODULES(GLIB, [glib-2.0])
 AC_SUBST(GLIB_CFLAGS)
 AC_SUBST(GLIB_LIBS)
 
-PKG_CHECK_MODULES(GNOMEVFS, [gnome-vfs-2.0])
+PKG_CHECK_MODULES(GNOMEVFS, [gnome-vfs-2.0 >= 2.10])
 AC_SUBST(GNOMEVFS_CFLAGS)
 AC_SUBST(GNOMEVFS_LIBS)
 
