use libunique to disallow the same instance from running multiple times at once

--- a/configure.ac
+++ b/configure.ac
@@ -36,6 +36,10 @@ PKG_CHECK_MODULES(DBUS_GLIB, [dbus-glib-1])
 AC_SUBST(DBUS_GLIB_CFLAGS)
 AC_SUBST(DBUS_GLIB_LIBS)
 
+PKG_CHECK_MODULES(UNIQUE, [unique-1.0])
+AC_SUBST(UNIQUE_CFLAGS)
+AC_SUBST(UNIQUE_LIBS)
+
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_FILES([
   Makefile
