--- a/corn/Makefile.am
+++ b/corn/Makefile.am
@@ -2,12 +2,12 @@ localedir=$(datadir)/locale
 
 AM_CPPFLAGS=$(GLIB_CFLAGS) $(GTHREAD_CFLAGS) \
     $(DBUS_GLIB_CFLAGS) $(GNOMEVFS_CFLAGS) $(XINE_CFLAGS) \
-    -DG_DISABLE_DEPRECATED -DLOCALEDIR=\"$(localedir)\"
+    $(UNIQUE_CFLAGS) -DG_DISABLE_DEPRECATED -DLOCALEDIR=\"$(localedir)\"
 
 bin_PROGRAMS = corn
 
 corn_LDADD = $(GLIB_LIBS) $(GTHREAD_LIBS) $(DBUS_GLIB_CFLAGS) \
-    $(GNOMEVFS_LIBS) $(XINE_LIBS)
+    $(GNOMEVFS_LIBS) $(XINE_LIBS) $(UNIQUE_LIBS)
 
 corn_SOURCES = \
   gettext.h \
