--- a/configure.ac
+++ b/configure.ac
@@ -40,6 +40,10 @@ PKG_CHECK_MODULES(UNIQUE, [unique-1.0])
 AC_SUBST(UNIQUE_CFLAGS)
 AC_SUBST(UNIQUE_LIBS)
 
+PKG_CHECK_MODULES(GIO, [gio-2.0])
+AC_SUBST(GIO_CFLAGS)
+AC_SUBST(GIO_LIBS)
+
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_FILES([
   Makefile
