gnome vfs -> gio

--- a/corn/Makefile.am
+++ b/corn/Makefile.am
@@ -1,14 +1,14 @@
 localedir=$(datadir)/locale
 
 AM_CPPFLAGS=$(GLIB_CFLAGS) $(GTHREAD_CFLAGS) $(GIO_CFLAGS) $(SQLITE_CFLAGS) \
-    $(DBUS_GLIB_CFLAGS) $(GNOMEVFS_CFLAGS) $(XINE_CFLAGS) \
+    $(DBUS_GLIB_CFLAGS) $(XINE_CFLAGS) \
     $(UNIQUE_CFLAGS) -DG_DISABLE_DEPRECATED -DLOCALEDIR=\"$(localedir)\" \
     -DSQLITE_THREADSAFE=0
 
 bin_PROGRAMS = corn
 
 corn_LDADD = $(GLIB_LIBS) $(GTHREAD_LIBS) $(DBUS_GLIB_LIBS) \
-    $(GNOMEVFS_LIBS) $(XINE_LIBS) $(UNIQUE_LIBS) $(GIO_LIBS) $(SQLITE_LIBS)
+    $(XINE_LIBS) $(UNIQUE_LIBS) $(GIO_LIBS) $(SQLITE_LIBS)
 
 corn_SOURCES = \
   gettext.h \
